Correct to left align on vertically centered titles.

--- a/src/styles/_spacing.scss
+++ b/src/styles/_spacing.scss
@@ -185,6 +185,5 @@ $directions: 'top' 'bottom' 'left' 'right';
 
 .vertical-middle {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
